--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon start"
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/mohsinogen/backend-development/issues"
   },
-  "homepage": "https://github.com/mohsinogen/backend-development#readme"
+  "homepage": "https://github.com/mohsinogen/backend-development#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  }
 }
