--- a/5. Boiler-Template/package.json
+++ b/5. Boiler-Template/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "backend-development",
+  "name": "boilertemplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "author": "",
@@ -16,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.3",
+    "morgan": "^1.10.0"
   }
 }
